Version 2.03.02 - 
===================================
  Query mpath device only once per command for its state.
  Use device INFO instead of STATUS when checking for mpath device uuid.
  Change default io_memory_size from 4 to 8 MiB.
  Add config setting io_memory_size to set bcache size.
  Fix pvscan autoactivation for concurrent pvscans.
  Change scan_lvs default to 0 so LVs are not scanned for PVs.
  Thin-pool selects power-of-2 chunk size by default.
  Cache selects power-of-2 chunk size by default.
  Support reszing for VDOPoolLV and VDOLV.
  Improve -lXXX%VG modifier which improves cache segment estimation.
  Ensure migration_threshold for cache is at least 8 chunks.
  Restore missing man info lvcreate --zero for thin-pools.
  Drop misleadning comment for metadata minimum_io_size for VDO segment.
  Add device hints to reduce scanning.
  Introduce LVM_SUPPRESS_SYSLOG to suppress syslog usage by generator.
  Fix generator quering lvmconfig unpresent config option.
  Fix memleak on bcache error path code.
  Fix missing unlock on lvm2 dmeventd plugin error path initialization.
  Improve Makefile dependency tracking.
  Move VDO support towards V2 target (6.2) support.
  Fix missing proper initialization of pv_list struct when adding pv.
  Fix (de)activation of RaidLVs with visible SubLVs
  Prohibit mirrored 'mirror' log via lvcreate and lvconvert
  Use sync io if async io_setup fails, or use_aio=0 is set in config.

Version 2.03.01 - 31st October 2018
===================================

Version 2.03.00 - 10th October 2018
===================================
  Add hot fix to avoiding locking collision when monitoring thin-pools.
  Allow raid4 -> linear conversion request.
  Fix lvconvert striped/raid0/raid0_meta -> raid6 regression.
  Add 'lvm2-activation-generator:' prefix for kmsg messages logged by generator.
  Add After=rbdmap.service to {lvm2-activation-net,blk-availability}.service.
  Reduce max concurrent aios to avoid EMFILE with many devices.