@@ -1,5 +1,6 @@
 Version 2.03.02 - 
 ===================================
+  Add support for vgsplit with cached devices.
   Query mpath device only once per command for its state.
   Use device INFO instead of STATUS when checking for mpath device uuid.
   Change default io_memory_size from 4 to 8 MiB.
